# qverify-framework

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
configs/llm_configs/: anthropic.yaml  openai.yaml
data/benchmarks/: README.json
data/examples/: bell_state.silq  grover_iteration.silq
data/specifications/: ground_truth.json
docs/: POWERSHELL_SETUP_GUIDE.md
docs/api/: index.md
docs/images/: README.md
docs/tutorials/: index.md
notebooks/: 01_getting_started.ipynb  02_specification_synthesis.ipynb  03_verification_deep_dive.ipynb
scripts/: evaluate_llm.py  generate_specs.py  run_benchmark.py
src/qverify/: __init__.py  cli.py  qverify.py
src/qverify/algorithms/: __init__.py  invariant_synth.py  predicate_learning.py  spec_repair.py  spec_synth.py
src/qverify/benchmark/: __init__.py  metrics.py  qverifybench.py
src/qverify/benchmark/programs/: programs.json
src/qverify/core/: __init__.py  quantum_program.py  quantum_state.py  specification.py  types.py
src/qverify/utils/: __init__.py  llm_interface.py  logging.py  parsers.py
src/qverify/verification/: __init__.py  counterexample.py  neural_silver.py  neural_verifier.py  smt_interface.py  vc_generator.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_additional_coverage.py  test_algorithms.py  test_comprehensive.py  test_core.py  test_final_coverage.py  test_synthesis.py
